# Serpent

./: .gitmodules  CMakeLists.txt  changelog.md  mod.json
.github/workflows/: multi-platform.yml
include/: Serpent.hpp
src/: bindings.cpp  hooks.cpp  main.cpp  wrapper.cpp  wrapper.hpp
src/ui/: ScriptItem.cpp  ScriptsLayer.cpp
